# forgejo-mirroring

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  __main__.py  docker-compose.yaml  list.py  pyproject.toml  requirements.txt  variables.py
forge/: forgejo_api.py  gitlab.py
listing/: repositories.py
old/: __main__.py  logger_utils.py
old/src/: variables.py
old/src/forge/: __init__.py  forgejo.py  github.py  gitlab.py
old/src/models/: gitforge.py  repository.py
old/src/utils/: __init__.py
old/src/utils/logger/: __init__.py  logger.py
repository/: gitforge.py  project.py
src/: variables.py
src/forge/: __init__.py  api.py  forgejo.py  github.py  gitlab.py  request_method.py
src/forgejo_mirroring/: app.py  args.py  config.py  env.py  logging.py  utils.py
src/forgejo_mirroring/command/: __init__.py  sync.py
src/forgejo_mirroring/forge/: __init__.py  forge.py  forgejo.py  github.py  gitlab.py
src/forgejo_mirroring/models/: __init__.py  gitforge.py  repository.py  request_method.py
src/forgejo_mirroring/repositories/: __init__.py  forge.py  forge_api.py  forgejo_repo.py  github_repo.py  gitlab_repo.py
src/forgejo_mirroring/utils/logger/: logger.py
src/models/: __init__.py  gitforge.py  repository.py
src/utils/: __init__.py  parser.py  response.py
src/utils/logger/: logger.py  logger_color.py
tests/: test_app.py
