[project]
name = "forgejo_mirroring"
version = "0.1.0"
description = "Quickly back up your GitHub and GitLab repositories via Forgejo with mirroring."
authors = [{ name = "Ewilan Rivière" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "python-dotenv",
  "requests",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
