[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forgejo-mirroring"
version = "0.1.0"
dependencies = ["requests", "dotenv"]
requires-python = ">=3.12"
readme = "README.md"
description = "Quickly backup your GitHub and GitLab repositories via Forgejo mirroring, Docker ready."
authors = [{ name = "Ewilan Rivière" }]

[project.scripts]
forgejo-mirroring = "forgejo_mirroring.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
